UHF-2916: Fix button on service units list on service page, remove extra button spacing, fix spacing on units that have no services but only accessiblity sentences on the bottom of the content

--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -92,7 +92,6 @@ p > a.hds-button.hds-button--supplementary:first-child {
   display: flex;
   font-weight: 500;
   justify-content: center;
-  margin-top: $spacing;
   min-height: var(--min-size);
   min-width: var(--min-size);
   padding: $spacing $spacing-double;
